--- a/src/styleSheets/AppForm.css
+++ b/src/styleSheets/AppForm.css
@@ -27,16 +27,20 @@ Form {
 }
 
 .btnSubmitInfo {
-    background-color: none;
-    color: cornflowerblue;
+    background-color: cornflowerblue;
+    border-color: cornflowerblue;
+    color: gold;
     transition: all 0.7s ease;
+    font-family: helvetica;
+    box-shadow: 0px 0px 4px grey;
 }
 
 .btnSubmitInfo:hover {
+    font-family: helvetica;
     color: #132c33;
-    border: 3px solid #184562;
+    border: 2px solid #184562;
     transition: all 0.7s ease;
-    letter-spacing: 3px;
+    letter-spacing: 2px;
     box-shadow: inset 500px 0 0 0px #bdd2b6;
 }
 
