--- a/src/styleSheets/Home.css
+++ b/src/styleSheets/Home.css
@@ -3,7 +3,7 @@ h1 {
 }
 
 .homePage {
-  background-color: rgb(230, 230, 230);
+  background-color: beige;
   position: relative;
   height: 100vh;
 }
