added in pages for applicant side and added in routing, also adjusted some formatting

--- a/src/styleSheets/SiteHeader.css
+++ b/src/styleSheets/SiteHeader.css
@@ -44,5 +44,7 @@ img {
   height: 157px;
 
   padding-bottom: 0px;
-  margin-bottom: 0px;
+  margin-bottom: 3px;
+  margin-top: 3px;
+  margin-left: 3px;
 }
