--- a/src/styleSheets/JobPostings.css
+++ b/src/styleSheets/JobPostings.css
@@ -8,6 +8,23 @@
     min-height: 100vh;
 }
 
+.tableHeader {
+    border: 4px solid black !important;
+    background-color: rgb(150, 149, 148);
+}
+
+th {
+    border: 3px solid black !important;
+    font-size: 15pt;
+}
+
+td {
+    border-right: 3px solid black !important;
+    border-bottom: 2px solid black !important;
+    font-size: 11pt;
+    border-left: 3px solid black !important;
+}
+
 .search {
     display: flex;
     justify-content: center;
@@ -22,4 +39,15 @@
 
 .search-button {
     margin-left: 20px;
+}
+
+h2 {
+    padding: 13px;
+    margin: auto;
+    text-align: center;
+    text-shadow: 0px 0px 1px grey;
+    /*background-color: rgba(255, 225, 0, 0.863);*/
+    background-color: rgb(255, 221, 31);
+    color: rgb(49, 134, 219);
+    position: relative;
 }
